# pyxis

./: .gitignore  CONTRIBUTING.md  Cargo.toml  NOTICE-CODEX.md  README.md
crates/agent-auth/examples/: login.rs
crates/agent-auth/src/: lib.rs  store.rs
crates/agent-auth/src/oauth/: openai_chatgpt.rs  pkce.rs
crates/agent-cli/: Cargo.toml
crates/agent-cli/prompts/: codex_finetuned.md  gpt5_generic.md
crates/agent-cli/src/: approver.rs  context.rs  interactive.rs  main.rs  prompt.rs  session.rs  settings.rs
crates/agent-core/src/: agent.rs  budget.rs  compaction.rs  error.rs  event.rs  guardrail.rs  lib.rs  message.rs  provider.rs  session.rs  tools.rs  transition.rs
crates/agent-mcp/: Cargo.toml
crates/agent-mcp/src/: client.rs  config.rs  error.rs  lib.rs  server.rs
crates/agent-mcp/tests/: config_load.rs
crates/agent-provider/examples/: smoke.rs
crates/agent-provider/src/: chatgpt.rs  chatgpt_events.rs  chatgpt_request.rs  credential.rs  lib.rs  models.rs
crates/agent-sandbox/src/: fs.rs  proxy.rs
crates/agent-session/: Cargo.toml
crates/agent-session/src/: lib.rs
crates/agent-tokenizer/: Cargo.toml
crates/agent-tokenizer/src/: lib.rs
crates/agent-tools/: Cargo.toml
crates/agent-tools/src/: bash.rs  edit.rs  error.rs  glob.rs  grep.rs  lib.rs  path.rs  permission.rs  read.rs  registry.rs  taint.rs  tests_integration.rs  tool.rs  write.rs
crates/agent-tui/: Cargo.toml
crates/agent-tui/examples/: gallery.rs  input.rs  logo_lab.rs  transcript.rs  welcome.rs
crates/agent-tui/src/: app_event.rs  bottom_pane.rs  cache.rs  debug_log.rs  diff.rs  highlight.rs  history_cell.rs  insert_history.rs  lib.rs  markdown.rs  measure.rs  render.rs  spinner.rs  state.rs  term.rs  terminal_hyperlinks.rs  theme.rs  tool.rs
docs/: ARCHITECTURE.md  CURRENT_STATUS.md  DECISIONS.md  PROVIDERS.md  ROADMAP.md  codex-port-inventory.md  codex-wire-spike.md  openai-subscription-auth.md
spikes/: Cargo.toml  README.md
spikes/.cargo/: config.toml
spikes/s1-provider-access/: Cargo.toml
spikes/s1-provider-access/src/: main.rs
spikes/s2-canonical-sse/: Cargo.toml
spikes/s2-canonical-sse/src/: lib.rs  main.rs
spikes/s3-agent-loop/: Cargo.toml
spikes/s3-agent-loop/src/: lib.rs  main.rs
spikes/s4-tui-stream/: Cargo.toml
spikes/s4-tui-stream/src/: lib.rs  main.rs
spikes/s5-sandbox/: Cargo.toml
spikes/s5-sandbox/src/: main.rs  proxy.rs
tasks/: prd-codex-orchestration-status.json  prd-codex-orchestration.md  prd-pyxis-status.json  prd-pyxis.md  prd-response-rendering-status.json  prd-response-rendering.md  spike-verdicts.md
