[package]
name = "agent-mcp"
version = "0.0.0"
edition.workspace = true
rust-version.workspace = true
publish.workspace = true

[lints]
workspace = true

[dependencies]
rmcp = { workspace = true }
# `process` (spawn du serveur stdio) en plus des features tokio du workspace.
tokio = { workspace = true, features = ["process"] }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
