[package]
name = "s1-provider-access"
version = "0.0.0"
edition.workspace = true
rust-version.workspace = true
publish = false

[lints]
workspace = true

[[bin]]
name = "s1-provider-access"
path = "src/main.rs"

[dependencies]
spike_canon = { path = "../s2-canonical-sse", package = "s2-canonical-sse" }
tokio = { workspace = true }
reqwest = { workspace = true }
futures-util = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
