[package]
name = "s2-canonical-sse"
version = "0.0.0"
edition.workspace = true
rust-version.workspace = true
publish = false

[lints]
workspace = true

[lib]
name = "spike_canon"
path = "src/lib.rs"

[[bin]]
name = "s2-canonical-sse"
path = "src/main.rs"

[dependencies]
tokio = { workspace = true }
reqwest = { workspace = true }
eventsource-stream = { workspace = true }
futures-util = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
async-stream = { workspace = true }
anyhow = { workspace = true }
