[package]
name = "s3-agent-loop"
version = "0.0.0"
edition.workspace = true
rust-version.workspace = true
publish = false

[lints]
workspace = true

[lib]
name = "spike_loop"
path = "src/lib.rs"

[[bin]]
name = "s3-agent-loop"
path = "src/main.rs"

[dependencies]
spike_canon = { path = "../s2-canonical-sse", package = "s2-canonical-sse" }
tokio = { workspace = true }
futures-util = { workspace = true }
serde_json = { workspace = true }
async-stream = { workspace = true }
anyhow = { workspace = true }
