[package]
name = "s4-tui-stream"
version = "0.0.0"
edition.workspace = true
rust-version.workspace = true
publish = false

[lints]
workspace = true

[lib]
name = "spike_tui"
path = "src/lib.rs"

[[bin]]
name = "s4-tui-stream"
path = "src/main.rs"

# crossterm utilisé via `ratatui::crossterm` (réexport) — pas de skew de version.
[dependencies]
ratatui = { workspace = true }
anyhow = { workspace = true }
