[package]
name = "s5-sandbox"
version = "0.0.0"
edition.workspace = true
rust-version.workspace = true
publish = false

[lints]
workspace = true

[dependencies]
tokio = { workspace = true }
anyhow = { workspace = true }

# Landlock = Linux only. Hors Linux, le sandbox FS dégrade explicitement (US-005 AC3).
[target.'cfg(target_os = "linux")'.dependencies]
landlock = { workspace = true }
